tests/query_errors/aggregate_init_fail/error.txt
Error: 
    7 |             st + x + []
      |             ^^^^^^^^ The binary operation `+` is not defined for the type `string` and `array`